helm/kd-confluent/kafkacat.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-cat
spec:
  selector:
    matchLabels:
      app: kafka-cat
  template:
    metadata:
      labels:
        app: kafka-cat
    spec:
      containers:
        - name: kafka-cat
          image: confluentinc/cp-kafkacat
          command: ["/bin/sh"]
          args: ["-c", "trap : TERM INT; sleep infinity & wait"]
