helm/kd-confluent/kd-ingress.yaml
#
# UI-based services have to use only host-based routing with a root path ('/')
# REST-based services are using path-based routing (although they could have 
# used host-based as well). Since they all define paths with a prefix ('/sr')
# and not root paths ('/'), they must also use a Rewrite annotation.
#
# Rewrite annotations require a regular expression with a capture group eg. (/|$)
# and (.*) to match sections of the URL entered by the user.
#
# Ingress rules must be defined within the same namespace as the corresponding
# service
#
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: kd-ingress-controlcenter
  namespace: kd-confluent
spec:
  rules:
  # Add this to DNS or local hosts file
  - host: cc.kd
    http:
      paths:
        - backend:
            serviceName: controlcenter
            servicePort: 9021
          path: /
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: kd-ingress-confluent
  namespace: kd-confluent
spec:
  rules:
  - http:
      paths:
        - backend:
            serviceName: schemaregistry
            servicePort: 8081
          path: /sr(/|$)(.*)
  - http:
      paths:
        - backend:
            serviceName: connectors
            servicePort: 8083
          path: /co(/|$)(.*)
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: kd-ingress-es
  namespace: default
spec:
  rules:
  - http:
      paths:
        - backend:
            serviceName: elasticsearch-master
            servicePort: 9200
          path: /es(/|$)(.*)
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: kd-ingress-kibana
  namespace: default
spec:
  rules:
  # Add this to DNS or local hosts file
  - host: kibana.kd
    http:
      paths:
        - backend:
            serviceName: kibana-kibana
            servicePort: 5601
          path: /
